@@ -2,7 +2,7 @@ import sys
 import unittest
 
 from pyramid import testing
-from pyramid.compat import text_type
+from ._compat import text_type
 
 class Base(object):
     def setUp(self):
