@@ -15,6 +15,8 @@
 - Ensure we can build when CHANGES.txt and README.rst cannot be found by
   setup.py.
 
+- Drop reliance on (now non-existent in 2.0) ``pyramid.compat``.
+
 0.3 (2014-07-01)
 ----------------
 
